[tool.poetry]
name = "calcola-tasse"
version = "0.1.0"
description = ""
authors = ["Filippo Barbari <filippo.barbari@gmail.com>"]
readme = "README.md"
packages = [{include = "calcola_tasse"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
